# oudia-to-kdl

./: .editorconfig  .gitignore  Cargo.toml  Justfile  README.md  flake.nix
.github/workflows/: depoly.yml
src/: lib.rs  main.rs
web/: index.html  main.js  style.css
