[package]
name = "oudia-to-kdl"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kdl = "6.5.0"
pest = "2.8.3"
pest_derive = "2.8.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.51", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.104"
